<resources>
    <string name="app_name">Find Film</string>
    <string name="title_home">Home</string>
    <string name="title_tv">TV</string>
    <string name="title_notifications">Notifications</string>
    <string name="cari">Search</string>
    <string name="label_cari">Search Somethings</string>
    <string name="sedang_tayang">Now Playing</string>
    <string name="rekomendasi">Recommendation</string>
    <string name="tolong_tunggu">Please wait</string>
    <string name="menampilkan_data">Showing data</string>
    <string name="menampilkan_trailer">Showing trailer</string>
    <string name="cari_film">Search any film</string>
    <string name="search_tv">Search any movie tv</string>
    <string name="data_tidak_ditemukan">Data not found!</string>
    <string name="film">Film</string>
    <string name="tv_show">Tv Show</string>
    <string name="favorite">Favorite</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="rating">Rating</string>
    <string name="tanggal_rilis">Release date :</string>
    <string name="kepopuleran">Popularity :</string>
    <string name="storyline">Storyline :</string>
    <string name="trailer">Trailer</string>
    <string name="bagikan">Share</string>
    <string name="tambah_favorit">Add Favorite</string>
    <string name="rating_float">Rating :</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="promp_username">Username</string>

</resources>