<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_home">

    <fragment
            android:id="@+id/navigation_home"
            android:name="my.mobile.findfilm.ui.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/navigation_tv"
            android:name="my.mobile.findfilm.ui.tv.TelevisionFragment"
            android:label="@string/title_tv"
            tools:layout="@layout/fragment_tv"/>

    <fragment
            android:id="@+id/navigation_favorit"
            android:name="my.mobile.findfilm.ui.favorit.FavoritFragment"
            android:label="@string/favorite"
            tools:layout="@layout/fragment_favorit"/>
</navigation>